crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m218_magic_floor_by_martin_korth.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-218-MagicFloor/Magic Floor by Martin Korth (2012) (PC10 Version) (PD).nes
rom_sha256=ad62b74460d06cb82e9b6bca78f996896240ed0ca05df04c736bc27a45c6f8ba
frames=600
fb_bytes=245760
cycles=17838524
audio_samples=439524
audio_fnv1a64=dda9e74ae2696052
checkpoint f600 fb_fnv1a64=6a9b2f591b691e4d
