crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m221_1000_in_1.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
assertion_line: 74
expression: text
---
rom=mapper-221-NTDEC-N625092/1000-in-1 (JPx72) [p1][!].zip
rom_sha256=b81f6af94f919c8ccae49d0d976ce389bd160ebed5d4556e1c3970585f27972c
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=d3f715e2e232b87a
checkpoint f600 fb_fnv1a64=26d46d1c14244470
