crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m226_76_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-226-BMC-76in1/76-in-1 [p1][!].nes
rom_sha256=6f68854d3402e6338f200c286ded1187734cc9176ada6037ee33c4bb6275c772
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=dda9e74ae2696052
checkpoint f600 fb_fnv1a64=4bebb834f81be568
